//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  name String [not null]
  password String [not null]
  role UserRole [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Reservation Reservation [not null]
  Vehicle Vehicle [not null]
}

Table Garage {
  id String [pk]
  name String [not null]
  zipcode String [not null]
  address String [not null]
  country String [not null]
  city String [not null]
  Spot Spot [not null]
  Reservation Reservation [not null]
}

Table Spot {
  id String [pk]
  garageId String [not null]
  garage Garage [not null]
  status SpotStatus [not null]
  vehicleType VehicleType[] [not null]
  Reservation Reservation [not null]
}

Table Reservation {
  id String [pk]
  userId String [not null]
  user User [not null]
  garageId String [not null]
  garage Garage [not null]
  spotId String [not null]
  spot Spot [not null]
  vehicleId String [not null]
  vehicle Vehicle [not null]
  startDate DateTime [not null]
  endDate DateTime [not null]
}

Table Vehicle {
  id String [pk]
  userId String [not null]
  user User [not null]
  type VehicleType [not null]
  plate String [not null]
  Reservation Reservation [not null]
}

Enum VehicleType {
  CAR
  MOTORCYCLE
  BIKE
}

Enum SpotStatus {
  AVAILABLE
  RESERVED
  OCCUPIED
}

Enum UserRole {
  ADMIN
  USER
}

Ref: Spot.garageId > Garage.id

Ref: Reservation.userId > User.id

Ref: Reservation.garageId > Garage.id

Ref: Reservation.spotId > Spot.id

Ref: Reservation.vehicleId > Vehicle.id

Ref: Vehicle.userId > User.id